# GeoSurf

./: README.md  difference.py  pyproject.toml  requirements.txt
Dementia/: data2npy.py  validation.py
geosurf/: __init__.py  cli.py  transform.py
